src/content-script-iframe.css
/* yt-live-chat-header-renderer */
yt-live-chat-header-renderer.ylcf-with-input {
  margin-top: 105px;
}
yt-live-chat-header-renderer > #primary-content {
  min-width: 0;
}
yt-live-chat-header-renderer
  > #primary-content
  > #view-selector
  > yt-sort-filter-sub-menu-renderer {
  width: 100%;
}

/* .ylcf-container */
.ylcf-container {
  padding: 12px 0 12px 0;
  position: fixed;
  background: #272727;
  display: flex;
  flex-direction: column;
  top: 0;
  left: 0;
  height: auto;
  width: 100%;
  border-bottom: var(--yt-live-chat-header-bottom-border, none);
}

/* .ylcf-menu-button */
.ylcf-menu-button > button > yt-icon > svg {
  pointer-events: none;
  display: block;
  width: 100%;
  height: 100%;
}
/* .ylcf-menu-button.ylcf-active-menu-button */
.ylcf-menu-button.ylcf-active-menu-button > button > yt-icon {
  color: #4387f1 !important;
}

#input-panel > yt-live-chat-message-input-renderer {
  padding: 0;
}
#input-panel > yt-live-chat-message-input-renderer > #container {
  opacity: 1;
}

/* .ylcf-description */
.ylcf-description {
  flex: 1;
  display: flex;
  align-items: center;
  padding: 15px 0;
}
.ylcf-description > button {
  text-align: center;
  font-size: smaller;
  flex: 1;
  color: var(--yt-spec-text-secondary);
  background: none;
  border: none;
  outline: none;
  cursor: pointer;
  --webkit-appearance: none;
}

